--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-asawsaw
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dizhi91/dizhi91.github.io/publish.css?2020" />
+    <title>爱草啦|爱草啦视频|最新地址|最新可用地址</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="keywords" content="91PORNY,九色,九色视频,国产自拍,自拍视频,成人视频,成人图片,成人自拍,最新地址
+" />
+    <meta name="description" content="欢迎访问爱草啦|爱草啦视频地址发布页，为您提供爱草啦视频最新地址。" />
+</head>
+
+<body>
+    <div id="main"></div>
+</body>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/dizhi91/dizhi91.github.io/publish.js?20201031"></script>
+</html>
