--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 <body>
     <div id="main"></div>
 </body>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/dizhi91/dizhi91.github.io/publish.js?20201031"></script>
+<script type="text/javascript" src="/publish.js?20201031"></script>
 </html>
