--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dizhi91/dizhi91.github.io/publish.css?2020" />
+    <link rel="stylesheet" href="/publish.css?2020" />
     <title>爱草啦|爱草啦视频|最新地址|最新可用地址</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport' />
