--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>爱草啦|爱草啦视频|最新地址|最新可用地址</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="keywords" content="91PORNY,九色,九色视频,国产自拍,自拍视频,成人视频,成人图片,成人自拍,最新地址
+    <meta name="keywords" content="91PORN,爱草啦,国产自拍,自拍视频,成人视频,成人图片,成人自拍,最新地址
 " />
     <meta name="description" content="欢迎访问爱草啦|爱草啦视频地址发布页，为您提供爱草啦视频最新地址。" />
 </head>
