--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
     <div id="main"></div>
 </body>
 <script type="text/javascript" src="/publish.js?20201031"></script>
+<div style="display:none"><script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1279751478&web_id=1279751478"></script></div>
 </html>
